강아지 추가

--- a/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
+++ b/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
@@ -258,7 +258,7 @@
     }
 
     .jumbotron {
-      background-color: #0AB3A8;
+      background-color: #1DB999;
       color: #fff;
       padding: 95px 30px;
 
@@ -293,17 +293,17 @@
     }
 
     .bg-orange {
-      background-color: #0AB3A8;
+      background-color: #1DB999;
       color: #fff;
     }
 
     .logo-small {
-      color: #0AB3A8;
+      color: #1DB999;
       font-size: 50px;
     }
 
     .logo {
-      color: #0AB3A8;
+      color: #1DB999;
       font-size: 200px;
     }
 
@@ -322,15 +322,15 @@
     .carousel-control.right,
     .carousel-control.left {
       background-image: none;
-      color: #0AB3A8;
+      color: #1DB999;
     }
 
     .carousel-indicators li {
-      border-color: #0AB3A8;
+      border-color: #1DB999;
     }
 
     .carousel-indicators li.active {
-      background-color: #0AB3A8;
+      background-color: #1DB999;
     }
 
     .item h4 {
@@ -346,7 +346,7 @@
     }
 
     .panel {
-      border: 1px solid #0AB3A8;
+      border: 1px solid #1DB999;
       border-radius: 0 !important;
       transition: box-shadow 0.5s;
     }
@@ -356,14 +356,14 @@
     }
 
     .panel-footer .btn:hover {
-      border: 1px solid #0AB3A8;
+      border: 1px solid #1DB999;
       background-color: #fff !important;
-      color: #0AB3A8;
+      color: #1DB999;
     }
 
     .panel-heading {
       color: #fff !important;
-      background-color: #0AB3A8 !important;
+      background-color: #1DB999 !important;
       padding: 25px;
       border-bottom: 1px solid transparent;
       border-top-left-radius: 0px;
@@ -387,7 +387,7 @@
 
     .panel-footer .btn {
       margin: 15px 0;
-      background-color: #0AB3A8;
+      background-color: #1DB999;
       color: #fff;
     }
 
@@ -410,7 +410,7 @@
 
     .navbar-nav li a:hover,
     .navbar-nav li.active a {
-      color: #0AB3A8 !important;
+      color: #1DB999 !important;
       background-color: #fff !important;
     }
 
@@ -422,7 +422,7 @@
     footer .glyphicon {
       font-size: 20px;
       margin-bottom: 20px;
-      color: #0AB3A8;
+      color: #1DB999;
     }
 
     .slideanim {
@@ -537,7 +537,7 @@
     </div>
   </nav>
 
-  <div class="jumbotron text-center">
+  <div class="jumbotron text-center" style="height: 440px;">
     <h5>댕댕이와 함께할 장소는 어디인가요?</h5>
     <h3>함께가개에서 반려견과 함께할 여정을 계획해보세요</h3>
 
@@ -579,8 +579,8 @@
     </form>
   </div>
 
-  <div id="blank" style="height: 300px">
-    <!-- <img src="{% static '\mapAPI\background_img.jpg' %}" alt="background-image"> -->
+  <div id="blank" style="height: 300px;text-align: center;">
+    <a href="#myPage"><img src="{% static 'mapAPI/pp-icon.png' %}" alt="pp_img" width="200" margin></a>
   </div>
 
   <div id="search_result" style="display:none;">
@@ -651,7 +651,7 @@
             <input type="submit" class="btn bg-orange" value="회원가입">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
           </div>
-          >>>>>>> origin/kakao_API_hj
+          <!-- >>>>>>> origin/kakao_API_hj -->
         </form>
       </div>
     </div>
@@ -750,6 +750,7 @@
     </div>
   </div>
   <div id="blank2" class="container-fluid2 text-center" style="height: 150px">
+   
   </div>
 
   <div id="blank3" class="container-fluid2 text-center" style="height: 80px">
