--- a/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
+++ b/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
@@ -718,14 +718,13 @@
     </div>
   </div>
 
-  <!-- iframe test용입니다 (Nougaga) 1988-->
   <div class="modal fade" id="naver" role="dialog">
     <div class="modal-dialog modal-fullsize">
       <!-- Modal content-->
-      <div class="modal-content col-lm-8 col-lm-offset-2" style="margin-top: 60px;">
+      <div class="modal-content col-lm-8 col-lm-offset-2" style="margin-top: 60px; align='middle'" >
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title" style="font-family:'나눔바른펜'">길찾기</h4>
+          <h4 class="modal-title" style=""></h4>
           <iframe
             src="https://i.pinimg.com/originals/00/9d/4d/009d4d8410c7fbc3603731c9d1dce4e7.gif"
             id="the_iframe" onload="calcHeight();" name="WrittenPublic" title="게시판뷰" frameborder="0" scrolling="no" style="overflow-x:hidden; overflow:auto; width:100%; min-height:500px;">
